# sa-mp-map-studio

./: .gitignore  CMakeLists.txt  README.md  sampplotter.qrc
data/: samp_zones.json
packaging/: sa-mp-map-studio.desktop.in  sa-mp-map-studio.metainfo.xml.in
scripts/: build_appimage.sh
src/: editor_types.h  img_archive.cpp  img_archive.h  main.cpp  main_window.cpp  main_window.h  map_widget.cpp  map_widget.h  mapandreas_heightmap.cpp  mapandreas_heightmap.h  runtime_asset_manager.cpp  runtime_asset_manager.h  sa_map_loader.cpp  sa_map_loader.h  samp_zone_database.cpp  samp_zone_database.h  txd_reader.cpp  txd_reader.h
